--- a/css/main.css
+++ b/css/main.css
@@ -1253,7 +1253,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #f47c1c;
+  background: #9c363c;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
