--- a/css/main.css
+++ b/css/main.css
@@ -1248,7 +1248,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #70eb05;
+  background: #422faa;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
